@@ -1,5 +1,6 @@
 2012-01-17 Pierrick Caillon <pierrick@in-cite.net>
 	* Corrected coordinates conversion using http://www.destineo.fr/extension/NavitiaPack/design/standard/javascript/conversion.js
+	* Changed Debug output method. Now at the end of the HTML. Can be forced on top with navitia_debug=2 instead of 1.
 
 2012-01-09 Pierrick Caillon <pierrick@in-cite.net>
 	* Added AddressType Node.
